--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>Hello World</h1>
+  <h2>Goodbye World</h2>
 
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolor molestias harum magnam fugit obcaecati. Facere,
     sed officia sequi velit in blanditiis fugit labore sit? Consequuntur laborum accusantium facilis laudantium unde et
